Update for ClojureBridgeMN
Updated dependencies
- note requirement to add [cljsjs.react.dom] and
  call (.render js/ReactDOM ...)
  http://stackoverflow.com/questions/38166125/reactjs-react-render-is-not-a-function-and-react-createelement-is-not-a-functio
Added simple README.md
Highlighted missing LICENSE #5
  https://github.com/bhauman/flappy-bird-demo/issues/5
Updated .gitignore https://github.com/bhauman/flappy-bird-demo/issues/5

Closes #3

Signed-off-by: Tom Marble <tmarble@info9.net>

--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,22 @@ pom.xml.asc
 *.jar
 *.class
 *-init.clj
-figwheel_server.log
+*.log
 .lein-deps-sum
 .lein-failures
 .lein-plugins
 .lein-repl-history
 .nrepl-port
 .lein-classpath
+
+# Emacs backup files
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
